feat: :sparkles: Add feature descriptions

--- a/lang/en.json
+++ b/lang/en.json
@@ -25,6 +25,7 @@
   "SDM.AbilityTho": "Thought",
   "SDM.AbilityThoAbbr": "tho",
   "SDM.AllCharacters": "All Characters",
+  "SDM.AllResourcesDepleted": "All resources depleted",
   "SDM.Amount": "Amount",
   "SDM.AnimalSupplies": "Animal Supplies",
   "SDM.ArmorType": "Type",
@@ -734,6 +735,7 @@
   "SDM.Item.Share": "Display in Chat",
   "SDM.Item.SplitItems": "Split Items",
   "SDM.Item.Unpack": "Unpack Item",
+  "SDM.Item.UsageRoll": "Usage Roll",
   "SDM.Item.View": "View",
   "SDM.ItemArmor": "Armor",
   "SDM.ItemArmorType": "Type",
@@ -742,16 +744,16 @@
   "SDM.ItemCurrentCharges": "Current Charges",
   "SDM.ItemFeature.album": "album",
   "SDM.ItemFeature.albumAbbr": "album",
-  "SDM.ItemFeature.albumDescription": "",
+  "SDM.ItemFeature.albumDescription": "Holds 1d4+1 powers. Efficient storage!",
   "SDM.ItemFeature.antimagic": "antimagic",
   "SDM.ItemFeature.antimagicAbbr": "antimagic",
-  "SDM.ItemFeature.antimagicDescription": "",
+  "SDM.ItemFeature.antimagicDescription": "Spend 1d6+1 life to nullify an effect (save)",
   "SDM.ItemFeature.armor": "armor",
   "SDM.ItemFeature.armor_piercing": "armor piercing",
   "SDM.ItemFeature.armor_piercingAbbr": "armor piercing",
   "SDM.ItemFeature.armor_piercingDescription": "Bonus to attack rolls against heavily armored targets",
   "SDM.ItemFeature.armorAbbr": "armor",
-  "SDM.ItemFeature.armorDescription": "",
+  "SDM.ItemFeature.armorDescription": "Also serves as armor",
   "SDM.ItemFeature.atrophy": "atrophy",
   "SDM.ItemFeature.atrophyAbbr": "atrophy",
   "SDM.ItemFeature.atrophyDescription": "Deals ability score damage",
@@ -760,19 +762,22 @@
   "SDM.ItemFeature.attuneDescription": "This weapon must be attuned by investing xp and turning it into a hallmark before its special abilities can be fully utilized",
   "SDM.ItemFeature.auto": "auto",
   "SDM.ItemFeature.autoAbbr": "auto",
-  "SDM.ItemFeature.autoDescription": "",
+  "SDM.ItemFeature.autoDescription": "Moves around. Claims to be alive",
   "SDM.ItemFeature.backfiring": "backfiring",
   "SDM.ItemFeature.backfiringAbbr": "backfiring",
   "SDM.ItemFeature.backfiringDescription": "Harms the user on a natural 1",
   "SDM.ItemFeature.blinding": "blinding",
   "SDM.ItemFeature.blindingAbbr": "blinding",
   "SDM.ItemFeature.blindingDescription": "Target can't see for one round. Critical hits may blind permanently",
+  "SDM.ItemFeature.booster": "booster",
+  "SDM.ItemFeature.boosterAbbr": "booster",
+  "SDM.ItemFeature.boosterDescription": "Adds ward bonus to another item or effect",
   "SDM.ItemFeature.bulky": "bulky",
   "SDM.ItemFeature.bulkyAbbr": "bulky",
-  "SDM.ItemFeature.bulkyDescription": "",
+  "SDM.ItemFeature.bulkyDescription": "Cumbersome. Hampers stealth and agility",
   "SDM.ItemFeature.bulletproof": "bulletproof",
   "SDM.ItemFeature.bulletproofAbbr": "bulletproof",
-  "SDM.ItemFeature.bulletproofDescription": "",
+  "SDM.ItemFeature.bulletproofDescription": " Grants resistance against high-velocity kinetic attacks. That means half damage",
   "SDM.ItemFeature.burdening": "burdening",
   "SDM.ItemFeature.burdeningAbbr": "burdening",
   "SDM.ItemFeature.burdeningDescription": "A hit imposes a burden on the target. They suffer a -1 to all subsequent rolls",
@@ -781,13 +786,13 @@
   "SDM.ItemFeature.burstDescription": "Unload all your ammo to deal damage in a small area. Targets can take cover and forfeit their next move for half damage. Targets already under cover take no damage if they forfeit their next move.",
   "SDM.ItemFeature.camolion": "camolion",
   "SDM.ItemFeature.camolionAbbr": "camo",
-  "SDM.ItemFeature.camolionDescription": "",
+  "SDM.ItemFeature.camolionDescription": "Like that scaly, color-changing lion of legend, this armor adjusts itself to help you hide.",
   "SDM.ItemFeature.cavalry": "cavalry",
   "SDM.ItemFeature.cavalryAbbr": "cavalry",
   "SDM.ItemFeature.cavalryDescription": "One-handed weapon for use with a steed. Deals double damage when charging",
   "SDM.ItemFeature.charges": "charges",
   "SDM.ItemFeature.chargesAbbr": "charges",
-  "SDM.ItemFeature.chargesDescription": "",
+  "SDM.ItemFeature.chargesDescription": "The exact number of bullets or other resource in a gun",
   "SDM.ItemFeature.clumsy": "clumsy",
   "SDM.ItemFeature.clumsyAbbr": "clumsy",
   "SDM.ItemFeature.clumsyDescription": "Penalty to attack rolls, obviously",
@@ -799,40 +804,40 @@
   "SDM.ItemFeature.confusingDescription": "Target is confused, suffering a penalty to its actions for one round",
   "SDM.ItemFeature.cool": "cool",
   "SDM.ItemFeature.coolAbbr": "cool",
-  "SDM.ItemFeature.coolDescription": "",
+  "SDM.ItemFeature.coolDescription": "Looks good in the sun, but a thermal blanket is recommended at night because it gets chilly.",
   "SDM.ItemFeature.corpsefed": "corpsefed",
   "SDM.ItemFeature.corpsefedAbbr": "corpsefed",
-  "SDM.ItemFeature.corpsefedDescription": "",
+  "SDM.ItemFeature.corpsefedDescription": "Double bonus for an hour after it eats",
   "SDM.ItemFeature.corrupting": "corrupting",
   "SDM.ItemFeature.corruptingAbbr": "corrupting",
   "SDM.ItemFeature.corruptingDescription": "The target saves or suffers a mutation",
   "SDM.ItemFeature.cramping": "cramping",
   "SDM.ItemFeature.crampingAbbr": "cramping",
-  "SDM.ItemFeature.crampingDescription": "",
+  "SDM.ItemFeature.crampingDescription": "Penalty to defense. Usually -1",
   "SDM.ItemFeature.deathlike": "deathlike",
   "SDM.ItemFeature.deathlikeAbbr": "deathlike",
-  "SDM.ItemFeature.deathlikeDescription": "",
+  "SDM.ItemFeature.deathlikeDescription": "Makes you look undead",
   "SDM.ItemFeature.deathly": "deathly",
   "SDM.ItemFeature.deathlyAbbr": "deathly",
   "SDM.ItemFeature.deathlyDescription": "Has a save or die or similar terminal effect",
   "SDM.ItemFeature.emplaced": "emplaced",
   "SDM.ItemFeature.emplacedAbbr": "emplaced",
-  "SDM.ItemFeature.emplacedDescription": "",
+  "SDM.ItemFeature.emplacedDescription": "Set up to generate a small warding aura",
   "SDM.ItemFeature.entangling": "entangling",
   "SDM.ItemFeature.entanglingAbbr": "entangling",
   "SDM.ItemFeature.entanglingDescription": "Target saves or is immobilized. Getting free takes some work",
   "SDM.ItemFeature.environmental": "environmental",
   "SDM.ItemFeature.environmentalAbbr": "enviro",
-  "SDM.ItemFeature.environmentalDescription": "",
+  "SDM.ItemFeature.environmentalDescription": "Grants resistance (half damage) to acid, toxins, and dehydration—o-en with hazmat runes and breathing implants",
   "SDM.ItemFeature.fantascience": "fantascience",
   "SDM.ItemFeature.fantascienceAbbr": "fantascience",
   "SDM.ItemFeature.fantascienceDescription": "Gifts of the Logos unbound; use charisma for their attack rolls",
   "SDM.ItemFeature.fearsome": "fearsome",
   "SDM.ItemFeature.fearsomeAbbr": "fearsome",
   "SDM.ItemFeature.fearsomeDescription": "Makes animals howl in fear and forces humans to roll a morale test.",
-  "SDM.ItemFeature.flare": "flare",
+  "SDM.ItemFeature.flare": "flare #",
   "SDM.ItemFeature.flareAbbr": "flare",
-  "SDM.ItemFeature.flareDescription": "",
+  "SDM.ItemFeature.flareDescription": "Dissipate damage in excess of the flare number. Good against one attack per round.",
   "SDM.ItemFeature.frag": "frag",
   "SDM.ItemFeature.fragAbbr": "frag",
   "SDM.ItemFeature.fragDescription": "Its epic energies make slain enemies explode and deal (d) damage in a small area",
@@ -847,43 +852,43 @@
   "SDM.ItemFeature.heatDescription": "Metals glow. Flammable targets save or burn",
   "SDM.ItemFeature.heretical": "heretical",
   "SDM.ItemFeature.hereticalAbbr": "heretical",
-  "SDM.ItemFeature.hereticalDescription": "",
+  "SDM.ItemFeature.hereticalDescription": "Blasphemous technology. Don't get caught with it. Makes authorities hostile",
   "SDM.ItemFeature.hot": "hot",
   "SDM.ItemFeature.hotAbbr": "hot",
-  "SDM.ItemFeature.hotDescription": "",
+  "SDM.ItemFeature.hotDescription": "Good in winter, terrible in muggy summers. After exertion, you may well need some rest",
   "SDM.ItemFeature.implant": "implant",
   "SDM.ItemFeature.implantAbbr": "implant",
-  "SDM.ItemFeature.implantDescription": "",
+  "SDM.ItemFeature.implantDescription": "Attaches to your body. 1 life to remove",
   "SDM.ItemFeature.interfacing": "interfacing",
   "SDM.ItemFeature.interfacingAbbr": "interfacing",
-  "SDM.ItemFeature.interfacingDescription": "",
+  "SDM.ItemFeature.interfacingDescription": "Allows direct neural control of secondary systems, such as artillery or colossal golems",
   "SDM.ItemFeature.intravenous": "intravenous",
   "SDM.ItemFeature.intravenousAbbr": "intra",
-  "SDM.ItemFeature.intravenousDescription": "Loaded with holy or toxic liquids",
+  "SDM.ItemFeature.intravenousDescription": "Inject potions as a free action. Doff the armor slowly and carefully.",
   "SDM.ItemFeature.jade": "jade",
   "SDM.ItemFeature.jadeAbbr": "jade",
-  "SDM.ItemFeature.jadeDescription": "",
-  "SDM.ItemFeature.limited_land": "limited land",
-  "SDM.ItemFeature.limited_landAbbr": "limited",
-  "SDM.ItemFeature.limited_landDescription": "",
+  "SDM.ItemFeature.jadeDescription": "Grants ward bonus against ghosts and spirits",
   "SDM.ItemFeature.large": "large",
   "SDM.ItemFeature.largeAbbr": "large",
-  "SDM.ItemFeature.largeDescription": "",
+  "SDM.ItemFeature.largeDescription": "The armor is large enough that you will struggle with normal human doors and rooms",
+  "SDM.ItemFeature.limited_land": "limited land",
+  "SDM.ItemFeature.limited_landAbbr": "limited",
+  "SDM.ItemFeature.limited_landDescription": "Only works in one region",
   "SDM.ItemFeature.living": "living",
   "SDM.ItemFeature.livingAbbr": "living",
-  "SDM.ItemFeature.livingDescription": "",
+  "SDM.ItemFeature.livingDescription": "It’s alive. Feed it and it repair itself",
   "SDM.ItemFeature.lucent": "lucent",
   "SDM.ItemFeature.lucentAbbr": "lucent",
-  "SDM.ItemFeature.lucentDescription": "",
+  "SDM.ItemFeature.lucentDescription": "Clear enough to let light and some attack beams through",
   "SDM.ItemFeature.mad": "mad",
   "SDM.ItemFeature.madAbbr": "mad",
-  "SDM.ItemFeature.madDescription": "Drives its target mad and, if they are a PC, unplayable until treated or rebooted.",
+  "SDM.ItemFeature.madDescription": "Drives its target mad and, if they are a PC, unplayable until treated or rebooted",
   "SDM.ItemFeature.mercy": "mercy",
   "SDM.ItemFeature.mercyAbbr": "mercy",
   "SDM.ItemFeature.mercyDescription": "This weapon ends suffering. Target suffers a penalty to death rolls",
   "SDM.ItemFeature.mirror": "mirror",
   "SDM.ItemFeature.mirrorAbbr": "mirror",
-  "SDM.ItemFeature.mirrorDescription": "",
+  "SDM.ItemFeature.mirrorDescription": "Half damage from rays and beams",
   "SDM.ItemFeature.necrotic": "necrotic",
   "SDM.ItemFeature.necroticAbbr": "necrotic",
   "SDM.ItemFeature.necroticDescription": "Kills living tissue directly. Offen toxic",
@@ -893,87 +898,87 @@
   "SDM.ItemFeature.petrifying": "petrifying",
   "SDM.ItemFeature.petrifyingAbbr": "petrifying",
   "SDM.ItemFeature.petrifyingDescription": "Makes the target feel as though they have been turned to stone. Save allowed",
-  "SDM.ItemFeature.pocket": "pocket",
+  "SDM.ItemFeature.pocket": "pocket #",
   "SDM.ItemFeature.pocketAbbr": "pocket",
-  "SDM.ItemFeature.pocketDescription": "",
+  "SDM.ItemFeature.pocketDescription": "A secret pocket, that is. Hides # soaps",
   "SDM.ItemFeature.powered": "powered",
   "SDM.ItemFeature.poweredAbbr": "powered",
-  "SDM.ItemFeature.poweredDescription": "",
+  "SDM.ItemFeature.poweredDescription": "Spiritual engines power golem muscles. Armor gains a replenish score and a burn effect. Unpowered: penalty to physical activities",
   "SDM.ItemFeature.psychic": "psychic",
   "SDM.ItemFeature.psychicAbbr": "psychic",
-  "SDM.ItemFeature.psychicDescription": "",
+  "SDM.ItemFeature.psychicDescription": "Causes scars on the inside",
   "SDM.ItemFeature.radiant": "radiant",
   "SDM.ItemFeature.radiantAbbr": "radiant",
-  "SDM.ItemFeature.radiantDescription": "",
+  "SDM.ItemFeature.radiantDescription": "Uses energy rays. May set things aflame",
   "SDM.ItemFeature.reach": "reach",
   "SDM.ItemFeature.reachAbbr": "reach",
-  "SDM.ItemFeature.reachDescription": "",
+  "SDM.ItemFeature.reachDescription": "Longer, so it attacks first in close combat",
   "SDM.ItemFeature.replenish": "replenish",
   "SDM.ItemFeature.replenishAbbr": "re",
-  "SDM.ItemFeature.replenishDescription": "",
+  "SDM.ItemFeature.replenishDescription": "Abstracts the number of bullets or other resources. When you roll the replenish score or less, resources run out",
   "SDM.ItemFeature.restricted": "restricted",
   "SDM.ItemFeature.restrictedAbbr": "restricted",
-  "SDM.ItemFeature.restrictedDescription": "",
+  "SDM.ItemFeature.restrictedDescription": "Hard to find, overpriced, offen illegal. Zombies are such a thing",
   "SDM.ItemFeature.scary": "scary",
   "SDM.ItemFeature.scaryAbbr": "scary",
-  "SDM.ItemFeature.scaryDescription": "",
+  "SDM.ItemFeature.scaryDescription": "Applies ward bonus to foes' morale",
   "SDM.ItemFeature.semi_sentient": "semi sentient",
   "SDM.ItemFeature.semi_sentientAbbr": "sentient",
-  "SDM.ItemFeature.semi_sentientDescription": "",
+  "SDM.ItemFeature.semi_sentientDescription": "This weapon can follow simple instructions and attack on its own. Set it up on a powered swivel mount for best effect.",
   "SDM.ItemFeature.silent": "silent",
   "SDM.ItemFeature.silentAbbr": "silent",
-  "SDM.ItemFeature.silentDescription": "",
+  "SDM.ItemFeature.silentDescription": "This weapon makes no sound",
   "SDM.ItemFeature.slow": "slow",
   "SDM.ItemFeature.slowAbbr": "slow",
-  "SDM.ItemFeature.slowDescription": "",
+  "SDM.ItemFeature.slowDescription": "Goes after the usual initiative order",
   "SDM.ItemFeature.slumber": "slumber",
   "SDM.ItemFeature.slumberAbbr": "slumber",
-  "SDM.ItemFeature.slumberDescription": "",
+  "SDM.ItemFeature.slumberDescription": "Puts targets to sleep",
   "SDM.ItemFeature.spell_eater": "spell eater",
   "SDM.ItemFeature.spell_eaterAbbr": "spell eater",
-  "SDM.ItemFeature.spell_eaterDescription": "",
+  "SDM.ItemFeature.spell_eaterDescription": "Spend 1d4+1 life to capture a spell targeting you (save). Using it later takes an action",
   "SDM.ItemFeature.spiked": "spiked",
   "SDM.ItemFeature.spikedAbbr": "spiked",
-  "SDM.ItemFeature.spikedDescription": "",
+  "SDM.ItemFeature.spikedDescription": "Unarmed attackers suffer 1d3 damage",
   "SDM.ItemFeature.stealthy": "stealthy",
   "SDM.ItemFeature.stealthyAbbr": "stealthy",
-  "SDM.ItemFeature.stealthyDescription": "",
+  "SDM.ItemFeature.stealthyDescription": "Makes you more silent and sneaky",
   "SDM.ItemFeature.stylish": "stylish",
   "SDM.ItemFeature.stylishAbbr": "stylish",
-  "SDM.ItemFeature.stylishDescription": "",
+  "SDM.ItemFeature.stylishDescription": "Reveals you as a person of taste. Can be worn in civilian settings without raised eyebrows",
   "SDM.ItemFeature.subdual": "subdual",
   "SDM.ItemFeature.subdualAbbr": "subdual",
-  "SDM.ItemFeature.subdualDescription": "",
+  "SDM.ItemFeature.subdualDescription": "Target gets a bonus to death rolls",
   "SDM.ItemFeature.sunder": "sunder",
   "SDM.ItemFeature.sunderAbbr": "sunder",
-  "SDM.ItemFeature.sunderDescription": "",
+  "SDM.ItemFeature.sunderDescription": "The kind of shield you can allow to be destroyed to negate one attack",
   "SDM.ItemFeature.throwing": "throwing",
   "SDM.ItemFeature.throwingAbbr": "throwing",
-  "SDM.ItemFeature.throwingDescription": "",
+  "SDM.ItemFeature.throwingDescription": "Designed for throwing. Fine at short range, but suffers a penalty at longer ranges",
   "SDM.ItemFeature.two_handed": "two handed",
   "SDM.ItemFeature.two_handedAbbr": "2H",
-  "SDM.ItemFeature.two_handedDescription": "",
+  "SDM.ItemFeature.two_handedDescription": "Needs two hands to use properly. Big weapons (2+ st) are usually two-handed.",
   "SDM.ItemFeature.undreaming": "undreaming",
   "SDM.ItemFeature.undreamingAbbr": "undreaming",
-  "SDM.ItemFeature.undreamingDescription": "",
+  "SDM.ItemFeature.undreamingDescription": "Spend 1d4 life to look past illusions",
   "SDM.ItemFeature.versatile": "versatile",
   "SDM.ItemFeature.versatileAbbr": "vers",
-  "SDM.ItemFeature.versatileDescription": "",
+  "SDM.ItemFeature.versatileDescription": "Can be used two-handed to increase its damage dice one step (1d6 -> 1d8, 1d12 -> 1d20), unless specified otherwise (e.g. 1d10 -> 2d8)",
   "SDM.ItemFeature.vessel": "vessel",
   "SDM.ItemFeature.vesselAbbr": "vessel",
-  "SDM.ItemFeature.vesselDescription": "",
+  "SDM.ItemFeature.vesselDescription": "Can carry up to a dozen drinkable doses",
   "SDM.ItemFeature.vital": "vital",
   "SDM.ItemFeature.vitalAbbr": "vital",
-  "SDM.ItemFeature.vitalDescription": "",
+  "SDM.ItemFeature.vitalDescription": "This weapon drains the user of 1 life (or more) each time it is used",
   "SDM.ItemFeature.vorpal": "vorpal",
   "SDM.ItemFeature.vorpalAbbr": "vorpal",
-  "SDM.ItemFeature.vorpalDescription": "",
+  "SDM.ItemFeature.vorpalDescription": "Decapitating, bisecting, truncating on a natural 20 (or other specified natural roll). Turns one target into two ex-targets.",
   "SDM.ItemFeature.watchful": "watchful",
   "SDM.ItemFeature.watchfulAbbr": "watchful",
-  "SDM.ItemFeature.watchfulDescription": "",
+  "SDM.ItemFeature.watchfulDescription": "Keeps an eye on you. Like an alarm",
   "SDM.ItemFeature.weapon": "weapon",
   "SDM.ItemFeature.weaponAbbr": "weapon",
-  "SDM.ItemFeature.weaponDescription": "",
+  "SDM.ItemFeature.weaponDescription": "Also serves as a weapon",
   "SDM.ItemGearType": "Item Type",
   "SDM.ItemMaxCharges": "Max Charges",
   "SDM.ItemMountCapacity": "Capacity",
@@ -988,6 +993,7 @@
   "SDM.ItemSizeUnit": "Unit",
   "SDM.ItemSizeValue": "Size",
   "SDM.ItemStatusBroken": "broken",
+  "SDM.ItemStatusHaveEnough": "Have Enough",
   "SDM.ItemStatusNormal": "intact",
   "SDM.ItemStatusNotched": "notched",
   "SDM.ItemStatusRunningLow": "Running Low",
@@ -1416,6 +1422,7 @@
   "SDM.RerollingCharacter": "Rerolling Character: {name}",
   "SDM.Reset": "Reset to 0",
   "SDM.ResetBonusHeroDice": "Reset Bonus Hero Dice Pool",
+  "SDM.ResourcesKeepUsing": "Keep using your gear",
   "SDM.Result": "Result",
   "SDM.RollAdvantage": "advantage",
   "SDM.RollAdvantageAbbr": "↑a",
@@ -1721,9 +1728,5 @@
   "TYPES.Item.trait": "Trait",
   "TYPES.Item.vehicle": "Vehicle",
   "TYPES.Item.ward": "Ward",
-  "TYPES.Item.weapon": "Weapon",
-  "SDM.Item.UsageRoll": "Usage Roll",
-  "SDM.AllResourcesDepleted":"All resources depleted",
-  "SDM.ItemStatusHaveEnough": "Have Enough",
-  "SDM.ResourcesKeepUsing":"Keep using your gear"
+  "TYPES.Item.weapon": "Weapon"
 }
