--- a/lang/pt-BR.json
+++ b/lang/pt-BR.json
@@ -744,238 +744,241 @@
   "SDM.ItemCurrentCharges": "Cargas Atuais",
   "SDM.ItemFeature.album": "album",
   "SDM.ItemFeature.albumAbbr": "album",
-  "SDM.ItemFeature.albumDescription": "",
+  "SDM.ItemFeature.albumDescription": "Armazena 1d4+1 poderes. Armazenamento eficiente!",
   "SDM.ItemFeature.antimagic": "antimagia",
   "SDM.ItemFeature.antimagicAbbr": "antimagia",
-  "SDM.ItemFeature.antimagicDescription": "",
+  "SDM.ItemFeature.antimagicDescription": "Gaste 1d6+1 de vida para anular um efeito (salvaguarda)",
   "SDM.ItemFeature.armor": "armaudura",
   "SDM.ItemFeature.armor_piercing": "perfurante de armadura",
   "SDM.ItemFeature.armor_piercingAbbr": "perfurante",
-  "SDM.ItemFeature.armor_piercingDescription": "",
+  "SDM.ItemFeature.armor_piercingDescription": "Bônus em jogadas de ataque contra alvos com armadura pesada",
   "SDM.ItemFeature.armorAbbr": "armadura",
-  "SDM.ItemFeature.armorDescription": "",
+  "SDM.ItemFeature.armorDescription": "Também serve como armadura",
   "SDM.ItemFeature.atrophy": "atrofia",
   "SDM.ItemFeature.atrophyAbbr": "atrofia",
-  "SDM.ItemFeature.atrophyDescription": "",
+  "SDM.ItemFeature.atrophyDescription": "Causa dano em pontos de atributo",
   "SDM.ItemFeature.attune": "sintonizar",
   "SDM.ItemFeature.attuneAbbr": "sinton",
-  "SDM.ItemFeature.attuneDescription": "",
+  "SDM.ItemFeature.attuneDescription": "Esta arma deve ser sintonizada investindo XP e transformando-a em um item emblemático antes que suas habilidades especiais possam ser totalmente utilizadas",
   "SDM.ItemFeature.auto": "automático",
   "SDM.ItemFeature.autoAbbr": "auto",
-  "SDM.ItemFeature.autoDescription": "",
+  "SDM.ItemFeature.autoDescription": "Move-se. Afirma estar vivo",
   "SDM.ItemFeature.backfiring": "dano de retorno",
   "SDM.ItemFeature.backfiringAbbr": "retorno",
-  "SDM.ItemFeature.backfiringDescription": "",
+  "SDM.ItemFeature.backfiringDescription": "Prejudica o usuário em um 1 natural",
   "SDM.ItemFeature.blinding": "cegante",
   "SDM.ItemFeature.blindingAbbr": "cegante",
-  "SDM.ItemFeature.blindingDescription": "",
+  "SDM.ItemFeature.blindingDescription": "Alvo não pode ver por uma rodada. Acertos críticos podem cegar permanentemente",
+  "SDM.ItemFeature.booster": "impulsionador",
+  "SDM.ItemFeature.boosterAbbr": "impuls",
+  "SDM.ItemFeature.boosterDescription": "Adiciona bônus de égide a outro item ou efeito",
   "SDM.ItemFeature.bulky": "volumoso",
   "SDM.ItemFeature.bulkyAbbr": "volum",
-  "SDM.ItemFeature.bulkyDescription": "",
+  "SDM.ItemFeature.bulkyDescription": "Volumoso. Dificulta furtividade e rapidez",
   "SDM.ItemFeature.bulletproof": "à prova de balas",
   "SDM.ItemFeature.bulletproofAbbr": "blindado",
-  "SDM.ItemFeature.bulletproofDescription": "",
+  "SDM.ItemFeature.bulletproofDescription": "Concede resistência contra ataques cinéticos de alta velocidade. Isso significa metade do dano",
   "SDM.ItemFeature.burdening": "oneroso",
   "SDM.ItemFeature.burdeningAbbr": "oneroso",
-  "SDM.ItemFeature.burdeningDescription": "",
+  "SDM.ItemFeature.burdeningDescription": "Um acerto impõe um fardo ao alvo. Eles sofrem -1 em todas as rolagens subsequentes",
   "SDM.ItemFeature.burst": "rajada",
   "SDM.ItemFeature.burstAbbr": "rajada",
-  "SDM.ItemFeature.burstDescription": "",
+  "SDM.ItemFeature.burstDescription": "Descarregue toda sua munição para causar dano em uma pequena área. Alvos podem se cobrir e abrir mão do próximo movimento para sofrer metade do dano. Alvos já cobertos não sofrem dano se abrirem mão do próximo movimento.",
   "SDM.ItemFeature.camolion": "camuflagem",
   "SDM.ItemFeature.camolionAbbr": "camu",
-  "SDM.ItemFeature.camolionDescription": "",
+  "SDM.ItemFeature.camolionDescription": "Como aquele leão escamoso e mutante da lenda, esta armadura se ajusta para ajudá-lo a se esconder.",
   "SDM.ItemFeature.cavalry": "cavalaria",
   "SDM.ItemFeature.cavalryAbbr": "caval",
-  "SDM.ItemFeature.cavalryDescription": "",
+  "SDM.ItemFeature.cavalryDescription": "Arma de uma mão para uso com montaria. Causa dano duplo quando em carga",
   "SDM.ItemFeature.charges": "cargas",
   "SDM.ItemFeature.chargesAbbr": "cargas",
-  "SDM.ItemFeature.chargesDescription": "",
+  "SDM.ItemFeature.chargesDescription": "O número exato de balas ou outro recurso em uma arma",
   "SDM.ItemFeature.clumsy": "desajeitado",
   "SDM.ItemFeature.clumsyAbbr": "desaj",
-  "SDM.ItemFeature.clumsyDescription": "",
+  "SDM.ItemFeature.clumsyDescription": "Penalidade em jogadas de ataque, obviamente",
   "SDM.ItemFeature.concealed": "oculto",
   "SDM.ItemFeature.concealedAbbr": "oculto",
-  "SDM.ItemFeature.concealedDescription": "",
+  "SDM.ItemFeature.concealedDescription": "Fácil de esconder",
   "SDM.ItemFeature.confusing": "confusão",
   "SDM.ItemFeature.confusingAbbr": "conf",
-  "SDM.ItemFeature.confusingDescription": "",
+  "SDM.ItemFeature.confusingDescription": "Alvo fica confuso, sofrendo penalidade em suas ações por uma rodada",
   "SDM.ItemFeature.cool": "fresco",
   "SDM.ItemFeature.coolAbbr": "fresco",
-  "SDM.ItemFeature.coolDescription": "",
+  "SDM.ItemFeature.coolDescription": "Parece bom ao sol, mas um cobertor térmico é recomendado à noite porque esfria.",
   "SDM.ItemFeature.corpsefed": "alimentado por cadáver",
   "SDM.ItemFeature.corpsefedAbbr": "devora cadáver",
-  "SDM.ItemFeature.corpsefedDescription": "",
+  "SDM.ItemFeature.corpsefedDescription": "Bônus duplicado por uma hora após se alimentar",
   "SDM.ItemFeature.corrupting": "corruptor",
   "SDM.ItemFeature.corruptingAbbr": "corrupt",
-  "SDM.ItemFeature.corruptingDescription": "",
+  "SDM.ItemFeature.corruptingDescription": "O alvo faz salvaguarda ou sofre uma mutação",
   "SDM.ItemFeature.cramping": "limitante",
   "SDM.ItemFeature.crampingAbbr": "limit",
-  "SDM.ItemFeature.crampingDescription": "",
+  "SDM.ItemFeature.crampingDescription": "Penalidade na defesa. Geralmente -1",
   "SDM.ItemFeature.deathlike": "cadavérico",
   "SDM.ItemFeature.deathlikeAbbr": "cadavérido",
-  "SDM.ItemFeature.deathlikeDescription": "",
+  "SDM.ItemFeature.deathlikeDescription": "Faz você parecer um morto-vivo",
   "SDM.ItemFeature.deathly": "letal",
   "SDM.ItemFeature.deathlyAbbr": "letal",
-  "SDM.ItemFeature.deathlyDescription": "",
+  "SDM.ItemFeature.deathlyDescription": "Tem um efeito de salvaguarda ou morra ou similar terminal",
   "SDM.ItemFeature.emplaced": "fixo",
   "SDM.ItemFeature.emplacedAbbr": "fixo",
-  "SDM.ItemFeature.emplacedDescription": "",
+  "SDM.ItemFeature.emplacedDescription": "Configurado para gerar uma pequena aura de proteção",
   "SDM.ItemFeature.entangling": "enredar",
   "SDM.ItemFeature.entanglingAbbr": "enredar",
-  "SDM.ItemFeature.entanglingDescription": "",
+  "SDM.ItemFeature.entanglingDescription": "Alvo faz salvaguarda ou fica imobilizado. Libertar-se exige esforço",
   "SDM.ItemFeature.environmental": "ambiental",
   "SDM.ItemFeature.environmentalAbbr": "ambient",
-  "SDM.ItemFeature.environmentalDescription": "",
+  "SDM.ItemFeature.environmentalDescription": "Concede resistência (metade do dano) a ácido, toxinas e desidratação — geralmente com runas de proteção e implantes respiratórios",
   "SDM.ItemFeature.fantascience": "fantasciência",
   "SDM.ItemFeature.fantascienceAbbr": "fantasc",
-  "SDM.ItemFeature.fantascienceDescription": "",
+  "SDM.ItemFeature.fantascienceDescription": "Dádivas do Logos libertado; use Carisma para suas jogadas de ataque",
   "SDM.ItemFeature.fearsome": "temível",
   "SDM.ItemFeature.fearsomeAbbr": "temível",
-  "SDM.ItemFeature.fearsomeDescription": "",
+  "SDM.ItemFeature.fearsomeDescription": "Faz animais uivarem de medo e força humanos a fazer um teste de moral.",
   "SDM.ItemFeature.flare": "clarão",
   "SDM.ItemFeature.flareAbbr": "clarão",
-  "SDM.ItemFeature.flareDescription": "",
+  "SDM.ItemFeature.flareDescription": "Dissipa dano em excesso do número de clarão. Bom contra um ataque por rodada.",
   "SDM.ItemFeature.frag": "despedaçar",
   "SDM.ItemFeature.fragAbbr": "desped",
-  "SDM.ItemFeature.fragDescription": "",
+  "SDM.ItemFeature.fragDescription": "Suas energias épicas fazem inimigos mortos explodirem e causarem dano (d) em uma pequena área",
   "SDM.ItemFeature.glowing": "brilho",
   "SDM.ItemFeature.glowingAbbr": "brilho",
-  "SDM.ItemFeature.glowingDescription": "",
+  "SDM.ItemFeature.glowingDescription": "A arma brilha como uma tocha",
   "SDM.ItemFeature.hands_free": "mãos-livres",
   "SDM.ItemFeature.hands_freeAbbr": "mãos-livres",
-  "SDM.ItemFeature.hands_freeDescription": "",
+  "SDM.ItemFeature.hands_freeDescription": "Não requer mãos para usar esta arma",
   "SDM.ItemFeature.heat": "calor",
   "SDM.ItemFeature.heatAbbr": "calor",
-  "SDM.ItemFeature.heatDescription": "",
+  "SDM.ItemFeature.heatDescription": "Metais brilham. Alvos inflamáveis fazem salvaguarda ou queimam",
   "SDM.ItemFeature.heretical": "herético",
   "SDM.ItemFeature.hereticalAbbr": "herético",
-  "SDM.ItemFeature.hereticalDescription": "",
+  "SDM.ItemFeature.hereticalDescription": "Tecnologia blasfema. Não seja pego com ela. Torna as autoridades hostis",
   "SDM.ItemFeature.hot": "quente",
   "SDM.ItemFeature.hotAbbr": "quente",
-  "SDM.ItemFeature.hotDescription": "",
+  "SDM.ItemFeature.hotDescription": "Bom no inverno, terrível em verões úmidos. Após esforço, você pode precisar de descanso",
   "SDM.ItemFeature.implant": "implante",
   "SDM.ItemFeature.implantAbbr": "implante",
-  "SDM.ItemFeature.implantDescription": "",
+  "SDM.ItemFeature.implantDescription": "Prende-se ao seu corpo. 1 de vida para remover",
   "SDM.ItemFeature.interfacing": "interface",
   "SDM.ItemFeature.interfacingAbbr": "inter",
-  "SDM.ItemFeature.interfacingDescription": "",
+  "SDM.ItemFeature.interfacingDescription": "Permite controle neural direto de sistemas secundários, como artilharia ou golems colossais",
   "SDM.ItemFeature.intravenous": "intravenoso",
   "SDM.ItemFeature.intravenousAbbr": "intra",
-  "SDM.ItemFeature.intravenousDescription": "",
+  "SDM.ItemFeature.intravenousDescription": "Injeta poções como ação livre. Remova a armadura lenta e cuidadosamente.",
   "SDM.ItemFeature.jade": "jade",
   "SDM.ItemFeature.jadeAbbr": "jade",
-  "SDM.ItemFeature.jadeDescription": "",
-  "SDM.ItemFeature.limited_land": "validade regional",
-  "SDM.ItemFeature.limited_landAbbr": "regional",
-  "SDM.ItemFeature.limited_landDescription": "",
+  "SDM.ItemFeature.jadeDescription": "Concede bônus de égide contra fantasmas e espíritos",
   "SDM.ItemFeature.large": "grande",
   "SDM.ItemFeature.largeAbbr": "grande",
-  "SDM.ItemFeature.largeDescription": "",
+  "SDM.ItemFeature.largeDescription": "A armadura é grande o suficiente para você ter dificuldade com portas e salas humanas normais",
+  "SDM.ItemFeature.limited_land": "validade regional",
+  "SDM.ItemFeature.limited_landAbbr": "regional",
+  "SDM.ItemFeature.limited_landDescription": "Funciona apenas em uma região",
   "SDM.ItemFeature.living": "vivo",
   "SDM.ItemFeature.livingAbbr": "vivo",
-  "SDM.ItemFeature.livingDescription": "",
+  "SDM.ItemFeature.livingDescription": "Está viva. Alimente-a e ela se repara",
   "SDM.ItemFeature.lucent": "translúcido",
   "SDM.ItemFeature.lucentAbbr": "translúcido",
-  "SDM.ItemFeature.lucentDescription": "",
+  "SDM.ItemFeature.lucentDescription": "Transparente o suficiente para deixar passar luz e alguns feixes de ataque",
   "SDM.ItemFeature.mad": "loucura",
   "SDM.ItemFeature.madAbbr": "loucura",
-  "SDM.ItemFeature.madDescription": "",
+  "SDM.ItemFeature.madDescription": "Enlouquece o alvo e, se for um personagem, torna-o injogável até ser tratado ou reiniciado",
   "SDM.ItemFeature.mercy": "misericórdia",
   "SDM.ItemFeature.mercyAbbr": "miseri",
-  "SDM.ItemFeature.mercyDescription": "",
+  "SDM.ItemFeature.mercyDescription": "Esta arma acaba com o sofrimento. Alvo sofre penalidade em rolagens de morte",
   "SDM.ItemFeature.mirror": "refletor",
   "SDM.ItemFeature.mirrorAbbr": "reflet",
-  "SDM.ItemFeature.mirrorDescription": "",
+  "SDM.ItemFeature.mirrorDescription": "Metade do dano de raios e feixes",
   "SDM.ItemFeature.necrotic": "necrótico",
   "SDM.ItemFeature.necroticAbbr": "necro",
-  "SDM.ItemFeature.necroticDescription": "",
+  "SDM.ItemFeature.necroticDescription": "Mata tecido vivo diretamente. Frequentemente tóxico",
   "SDM.ItemFeature.oldtech": "velhatec",
   "SDM.ItemFeature.oldtechAbbr": "velhatec",
-  "SDM.ItemFeature.oldtechDescription": "",
+  "SDM.ItemFeature.oldtechDescription": "Encontradas em arquivos e cofres, essas armas antigas usam Inteligência para suas jogadas de ataque",
   "SDM.ItemFeature.petrifying": "petrificante",
   "SDM.ItemFeature.petrifyingAbbr": "petrif",
-  "SDM.ItemFeature.petrifyingDescription": "",
+  "SDM.ItemFeature.petrifyingDescription": "Faz o alvo sentir como se tivesse sido transformado em pedra. Salvaguarda permitida",
   "SDM.ItemFeature.pocket": "bolso",
   "SDM.ItemFeature.pocketAbbr": "bolso",
-  "SDM.ItemFeature.pocketDescription": "",
+  "SDM.ItemFeature.pocketDescription": "Um bolso secreto, isto é. Esconde # carteiras",
   "SDM.ItemFeature.powered": "energizado",
   "SDM.ItemFeature.poweredAbbr": "energ",
-  "SDM.ItemFeature.poweredDescription": "",
+  "SDM.ItemFeature.poweredDescription": "Motores espirituais alimentam músculos de golem. A armadura ganha uma pontuação de recarga e um efeito de queima. Sem energia: penalidade em atividades físicas",
   "SDM.ItemFeature.psychic": "psíquico",
   "SDM.ItemFeature.psychicAbbr": "psí",
-  "SDM.ItemFeature.psychicDescription": "",
+  "SDM.ItemFeature.psychicDescription": "Causa cicatrizes no interior",
   "SDM.ItemFeature.radiant": "radiante",
   "SDM.ItemFeature.radiantAbbr": "rad",
-  "SDM.ItemFeature.radiantDescription": "",
+  "SDM.ItemFeature.radiantDescription": "Usa raios de energia. Pode incendiar coisas",
   "SDM.ItemFeature.reach": "alcance",
   "SDM.ItemFeature.reachAbbr": "alc",
-  "SDM.ItemFeature.reachDescription": "",
+  "SDM.ItemFeature.reachDescription": "Mais longo, então ataca primeiro em combate corpo a corpo",
   "SDM.ItemFeature.replenish": "recarga",
   "SDM.ItemFeature.replenishAbbr": "re",
-  "SDM.ItemFeature.replenishDescription": "",
+  "SDM.ItemFeature.replenishDescription": "Abstrai o número de balas ou outros recursos. Quando você rola o valor de recarga ou menos, os recursos acabam",
   "SDM.ItemFeature.restricted": "restrito",
   "SDM.ItemFeature.restrictedAbbr": "restr",
-  "SDM.ItemFeature.restrictedDescription": "",
+  "SDM.ItemFeature.restrictedDescription": "Difícil de encontrar, superfaturado, muitas vezes ilegal. Zumbis são uma dessas coisas",
   "SDM.ItemFeature.scary": "assustador",
   "SDM.ItemFeature.scaryAbbr": "assustador",
-  "SDM.ItemFeature.scaryDescription": "",
+  "SDM.ItemFeature.scaryDescription": "Aplica bônus de égide ao moral dos inimigos",
   "SDM.ItemFeature.semi_sentient": "semi-senciente",
   "SDM.ItemFeature.semi_sentientAbbr": "senciente",
-  "SDM.ItemFeature.semi_sentientDescription": "",
+  "SDM.ItemFeature.semi_sentientDescription": "Esta arma pode seguir instruções simples e atacar sozinha. Configure-a em um suporte giratório motorizado para melhor efeito.",
   "SDM.ItemFeature.silent": "silencioso",
   "SDM.ItemFeature.silentAbbr": "silenc",
-  "SDM.ItemFeature.silentDescription": "",
+  "SDM.ItemFeature.silentDescription": "Esta arma não faz barulho",
   "SDM.ItemFeature.slow": "lento",
   "SDM.ItemFeature.slowAbbr": "lento",
-  "SDM.ItemFeature.slowDescription": "",
+  "SDM.ItemFeature.slowDescription": "Age depois da ordem de iniciativa usual",
   "SDM.ItemFeature.slumber": "sono",
   "SDM.ItemFeature.slumberAbbr": "sono",
-  "SDM.ItemFeature.slumberDescription": "",
+  "SDM.ItemFeature.slumberDescription": "Coloca alvos para dormir",
   "SDM.ItemFeature.spell_eater": "devorador de magias",
   "SDM.ItemFeature.spell_eaterAbbr": "devora magia",
-  "SDM.ItemFeature.spell_eaterDescription": "",
+  "SDM.ItemFeature.spell_eaterDescription": "Gaste 1d4+1 de vida para capturar uma magia que tem você como alvo (salvaguarda). Usá-la depois requer uma ação",
   "SDM.ItemFeature.spiked": "espinhoso",
   "SDM.ItemFeature.spikedAbbr": "espinho",
-  "SDM.ItemFeature.spikedDescription": "",
+  "SDM.ItemFeature.spikedDescription": "Atacantes desarmados sofrem 1d3 de dano",
   "SDM.ItemFeature.stealthy": "furtivo",
   "SDM.ItemFeature.stealthyAbbr": "furtivo",
-  "SDM.ItemFeature.stealthyDescription": "",
+  "SDM.ItemFeature.stealthyDescription": "Torna você mais silencioso e furtivo",
   "SDM.ItemFeature.stylish": "estiloso",
   "SDM.ItemFeature.stylishAbbr": "estiloso",
-  "SDM.ItemFeature.stylishDescription": "",
+  "SDM.ItemFeature.stylishDescription": "Revela você como uma pessoa de bom gosto. Pode ser usado em ambientes civis sem levantar sobrancelhas",
   "SDM.ItemFeature.subdual": "subjugador",
   "SDM.ItemFeature.subdualAbbr": "subjug",
-  "SDM.ItemFeature.subdualDescription": "",
+  "SDM.ItemFeature.subdualDescription": "Alvo recebe um bônus em rolagens de morte",
   "SDM.ItemFeature.sunder": "quebrável",
   "SDM.ItemFeature.sunderAbbr": "quebr",
-  "SDM.ItemFeature.sunderDescription": "",
+  "SDM.ItemFeature.sunderDescription": "O tipo de escudo que você pode permitir ser destruído para negar um ataque",
   "SDM.ItemFeature.throwing": "arremeço",
   "SDM.ItemFeature.throwingAbbr": "arremeço",
-  "SDM.ItemFeature.throwingDescription": "",
+  "SDM.ItemFeature.throwingDescription": "Projetado para arremesso. Bom em curta distância, mas sofre penalidade em distâncias maiores",
   "SDM.ItemFeature.two_handed": "duas mãos",
   "SDM.ItemFeature.two_handedAbbr": "2M",
-  "SDM.ItemFeature.two_handedDescription": "",
+  "SDM.ItemFeature.two_handedDescription": "Requer duas mãos para usar adequadamente. Armas grandes (2+ mo) geralmente são de duas mãos.",
   "SDM.ItemFeature.undreaming": "desperto",
   "SDM.ItemFeature.undreamingAbbr": "desperto",
-  "SDM.ItemFeature.undreamingDescription": "",
+  "SDM.ItemFeature.undreamingDescription": "Gaste 1d4 de vida para ver através de ilusões",
   "SDM.ItemFeature.versatile": "versátil",
   "SDM.ItemFeature.versatileAbbr": "vers",
-  "SDM.ItemFeature.versatileDescription": "",
+  "SDM.ItemFeature.versatileDescription": "Pode ser usada com duas mãos para aumentar o dado de dano em um passo (1d6 -> 1d8, 1d12 -> 1d20), a menos que especificado de outra forma (ex.: 1d10 -> 2d8)",
   "SDM.ItemFeature.vessel": "recipiente",
   "SDM.ItemFeature.vesselAbbr": "recip",
-  "SDM.ItemFeature.vesselDescription": "",
+  "SDM.ItemFeature.vesselDescription": "Pode carregar até uma dúzia de doses bebíveis",
   "SDM.ItemFeature.vital": "vital",
   "SDM.ItemFeature.vitalAbbr": "vital",
-  "SDM.ItemFeature.vitalDescription": "",
+  "SDM.ItemFeature.vitalDescription": "Esta arma drena 1 de vida (ou mais) do usuário cada vez que é usada",
   "SDM.ItemFeature.vorpal": "vorpal",
   "SDM.ItemFeature.vorpalAbbr": "vorpal",
-  "SDM.ItemFeature.vorpalDescription": "",
+  "SDM.ItemFeature.vorpalDescription": "Decapita, bissecciona, trunca em um 20 natural (ou outra rolagem natural especificada). Transforma um alvo em dois ex-alvos.",
   "SDM.ItemFeature.watchful": "vigilante",
   "SDM.ItemFeature.watchfulAbbr": "vigil",
-  "SDM.ItemFeature.watchfulDescription": "",
+  "SDM.ItemFeature.watchfulDescription": "Fica de olho em você. Como um alarme",
   "SDM.ItemFeature.weapon": "arma",
   "SDM.ItemFeature.weaponAbbr": "arma",
-  "SDM.ItemFeature.weaponDescription": "",
+  "SDM.ItemFeature.weaponDescription": "Também serve como arma",
   "SDM.ItemGearType": "Tipo de Item",
   "SDM.ItemMaxCharges": "Máx Cargas",
   "SDM.ItemMountCapacity": "Capacidade",
